lox's grammar/jail_locks_EBNF.txt
program       → declaration* EOF ;
-----------------------------------------------------------------------
declaration   → funDecl
              | varDecl
              | statement ;
-----------------------------------------------------------------------
funDecl       → "fun" function ;
function      → IDENTIFIER "(" parameters? ")" block ;
parameters    → IDENTIFIER ( "," IDENTIFIER )* ;
-----------------------------------------------------------------------
                                                     | multivariable (COMMA-separated) varDecs |
varDecl       → "var" IDENTIFIER ( "=" expression )? ("," IDENTIFIER ( "=" expression )?)* ";" ;
-----------------------------------------------------------------------
statement     → exprStmt
              | forStmt
              | ifStmt
              | printStmt
              | returnStmt
              | whileStmt
              | block
              | exit
              | breakStmt
              | continueStmt ;
-----------------------------------------------------------------------
exprStmt      → expression ";" ;
forStmt       → "for" "(" ( varDecl | exprStmt | ";" ) expression? ";" expression? ")" statement ;
ifStmt        → "if" "(" expression ")" statement ( "else" statement )? ;
printStmt     → "print" expression ";" ;
returnStmt     → "return" expression? ";" ;
whileStmt     → "while" "(" expression ")" statement ;
block         → "{" declaration* "}" ;
exit          → "exit" ;
breakStmt     → "break" ";" ;
continueStmt  → "continue" ";" ;
-----------------------------------------------------------------------
expression    → comma ;
comma         → assignment ( "," assignment )*;
assignment    → IDENTIFIER ( "=" | "+=" | "-=" | "*=" | "/=") assignment
              | ternary ;
ternary       → logic_or "?" expression ":" ternary
              | logic_or
logic_or      → logic_and ( "or" logic_and )* ;
logic_and     → equality ( "and" equality )* ;
equality      → comparison ( ( "!=" | "==" ) comparison )* ;
comparison    → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term          → factor ( ( "-" | "+" ) factor )* ;
factor        → exponent ( ( "/" | "*" | "%") exponent )* ;
exponent      → prefix_unary ( "^" ) exponent | prefix_unary;
prefix_unary  → ( "!" | "-" ) prefix_unary
              | postfix_unary ;
postfix_unary → call  ("++" | "--")
call          → primary ( "(" arguments? ")" )* ;     ] these 2
arguments     → expression ( "," expression )* ;      ] come 2gether
primary       → "true" | "false" | "nil"
              | NUMBER | STRING
              | "(" expression ")"
              | IDENTIFIER ;
-----------------------------------------------------------------------
